# evolution-agent

./: .gitignore  combined_training.jsonl  pyproject.toml  synthetic_data.jsonl  training_data_sft.jsonl
config/: default.yaml
docs/superpowers/plans/: 2026-03-22-image-evolution.md
docs/superpowers/specs/: 2026-03-22-image-evolution-design.md
examples/: bo_sweep.py  es_sweep.py  generate_target.py  gpu_rasterizer.py  optimize_blis.py  optimize_image.py  optimize_prompt.py  optimize_sorting.py  optimize_tsp.py  target_blocks.py  target_face.py  target_glow.py  target_image.py  target_rings.py  target_sunset.py
scripts/: extract_training_data.py  generate_synthetic_data.py  train_lora.py
src/evolution_agent/: __init__.py  cli.py
src/evolution_agent/analysis/: analyzer.py  patterns.py  prompts.py  scratchpad.py
src/evolution_agent/core/: config.py  engine.py  population.py  selector.py  types.py
src/evolution_agent/evaluation/: base.py  curiosity.py  function_eval.py  gpu_tuner.py  hybrid_eval.py  parameter_tuner.py  sandbox.py  subprocess_eval.py
src/evolution_agent/integrations/: blis_runner.py
src/evolution_agent/llm/: base.py  (+4 more)
tests/: test_claude_code_client.py  test_config.py  test_evaluator.py  test_image_fitness.py  test_image_main.py  test_image_render.py  test_image_seeds.py  test_llm_base.py  test_llm_extract_mutation.py  test_logger.py  test_meta_optimizer.py  test_mutation_parser.py  test_optuna_optimizer.py  test_parameter_tuner.py  test_patterns.py  test_population.py  test_sandbox.py  test_scratchpad.py  test_selector.py  test_types.py
(+7 files in other folders)
